# cog-arch

./: CODE.py  README.md  code2idk.py  indices.py  multivariateCode.py  oldCode.py  oldCode_printThresh.py
clustering-experiment-public-release/: README.md
clustering-experiment-public-release/clustering-analysis/: .gitignore  README.md  clustering-reliability-analysis.ipynb  main-analysis.ipynb  main.py  main.scm  mixed_effects_analysis.R  normality-simulations.ipynb
clustering-experiment-public-release/clustering-analysis/clustering_analysis/: __init__.py  classes.py  data_processing.py  measures.py
clustering-experiment-public-release/clustering-analysis/data/: clustering-pairs.json
clustering-experiment-public-release/clustering-analysis/data/normalized_clustering_trials/: 1.json  10.json  10003.json  10004.json  10005.json  10006.json  10007.json  10012.json  10013.json  10014.json  10015.json  10017.json  10018.json  10019.json  10020.json  10021.json  10022.json  10026.json  (+25 more)
clustering-experiment-public-release/clustering-experiment-interface/: .eslintrc.js  .gitignore  README.md  deploy.sh  development-servers.sh  download-jspsych-6.1.0.sh  index.html  package-lock.json  package.json  webpack.config.js
clustering-experiment-public-release/clustering-experiment-interface/serversrc/: README.md  app.py  pyproject.toml
clustering-experiment-public-release/clustering-experiment-interface/src/: addon-factorial-estimation.css  addon-factorial-estimation.js  clustering.css  index.js  jspsych-clustering.js  jspsych-factorial-estimation.js  jspsych-utils.js
clustering-experiment-public-release/clustering-experiment-interface/stimuli/: generation_info.json  practice_uuids.json  set_block_unique_uuids.json  stimuli_info.json  tmp.py
clustering-experiment-public-release/clustering-experiment-interface/text/: consent-form.md  demographics.md.mako  instructions.md
clustering-experiment-public-release/stimulus-generation/: CMakeLists.txt  README.md  stimuli_analysis.R  stimuli_analysis.py  stimuli_maker.py
clustering-experiment-public-release/stimulus-generation/general/: Point.cpp  Point.hpp  measures.cpp  measures.hpp  rand_utils.cpp  rand_utils.hpp
clustering-experiment-public-release/stimulus-generation/ground_truth_clusters/: Cluster.cpp  Cluster.hpp  Settings.hpp  generate.cpp  generate.hpp  ground_truth_clusters_cli.cpp  ground_truth_clusters_json.cpp  make_centroids.cpp  make_centroids.hpp
clustering-experiment-public-release/stimulus-generation/random_points/: random_points_json.cpp  random_points_logic.cpp  random_points_logic.hpp  random_points_python.cpp
(+116 files in other folders)
