[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vijay Marupudi <vijay@vijaymarupudi.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
